--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.62.2",
     "react-native-gesture-handler": "1.6.1",
     "react-native-get-random-values": "1.4.0",
+    "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "1.9.0",
     "react-native-redash": "14.2.1",
     "react-native-safe-area-context": "3.0.7",
