--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-redash": "14.2.1",
     "react-native-safe-area-context": "3.0.7",
     "react-native-screens": "2.9.0",
+    "realm": "^6.1.0",
     "uuid": "8.2.0",
     "yarn": "1.22.4"
   },
